# llm-chat-agent

./: .coverage  .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: doctests.yml  flake8.yml  integration-tests.yml
cmc_cs040_preslie/: chat.py
cmc_cs040_preslie/tools/: calculate.py  cat.py  grep.py  ls.py  path_utils.py
src/cmc_cs040_preslie.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
